# QOKit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  header.txt  kanon_test.txt  pyproject.toml  qaoa_dwe_benchmarking_results_V1.xlsx  requirements-commercial-solvers.txt  requirements-gpu.txt  requirements.txt  setup.py  test_qaoa_objective_labs.py  witch
DWE_MP_RESULTS/: Lamda0 shots1024 Mixters1000 P60 N10 TL0 CPU10.txt  Lamda0 shots1024 Mixters1000 P60 N10 TL0 CPU10_Output.txt  Lamda0 shots1024 Mixters1200 P60 N10 TL0 CPU10.txt  Lamda0 shots1024 Mixters1200 P60 N10 TL0 CPU10_Output.txt  Lamda0 shots1024 Mixters2000 P100 N10 TL0 CPU10.txt  Lamda0 shots1024 Mixters2000 P100 N10 TL0 CPU10_Output.txt  Lamda0 shots256 Mixters2200 P100 N5 TL0 CPU10.txt  Lamda0 shots256 Mixters2200 P100 N5 TL0 CPU10_Output.txt  Lamda1 shots1024 Mixters1000 P60 N10 TL0 CPU10 .txt  Lamda1 shots1024 Mixters1000 P60 N10 TL0 CPU10 output.txt  Lamda10 shots1024 Mixters1000 P60 N10 TL0 CPU10.txt  Lamda10 shots1024 Mixters1000 P60 N10 TL0 CPU10_Output.txt  Lamda1_shots1024_Mixters300_P30_N10_TL0_CPU10.txt  Lamda1_shots1024_Mixters300_P30_N10_TL0_CPU10_Output.txt  Lamda1_shots1024_Mixters500_P30_N10_TL0_CPU10.txt  Lamda1_shots1024_Mixters800_P40_N10_TL0_CPU10.txt  Lamda1_shots1024_Mixters800_P40_N10_TL0_CPU10_output.txt  time consumption of TL vs. N at RUNS=1,3,8 .txt
PK_folder/: gurobi_maxcut_test.py  maxcut_copy_pk.py
benchmark/: lazy_diagonal_benchmark.py
examples/: 9999999.ipynb  C_over_N.npy  C_p.npy  QAOA_GA_Parallel_Optimization_DWE.ipynb  QAOA_LABS_circuit_generation.ipynb  QAOA_LABS_optimization.ipynb  QAOA_Parallel_MultiStart_Optimization_DWE.ipynb  QAOA_Parallel_Optimization_DWE.ipynb  QAOA_SK_Expectation_vs_P.ipynb  QAOA_dwe.ipynb  QAOA_iterative_interpolation_SK.ipynb  QAOA_kSAT_circuit_generation.ipynb  QAOA_max_k_xor_sat.ipynb  QAOA_objective_for_general_Hamiltonian.ipynb  QAOA_plots.ipynb  QAOA_portfolio_optimization.ipynb  QOKit_general_simulation.ipynb  README.md  SK_bug.ipynb  Untitled.ipynb  Warm_Start_QAOA_maxcut_example.ipynb  benchmark.ipynb  benchmark_example.ipynb  generate_optimized_circuits_for_Np_experiments.ipynb  optimize_QAOA_parameter_for_LABS.ipynb  p_list.npy  qaoa_benchmarking_notebook.ipynb  qaoa_benchmarking_results.csv  qaoa_benchmarking_results_New.csv  qaoa_dwe_benchmarking_results.csv  qaoa_ga_evaluation.py  qaoa_parallel_optimizer_worker.py  qaoa_utils.py
experiments/: mpitest.py
grips/: Combinatorial_optimization_exercises.ipynb  Heatmap_of_real_and_proxy.py  PROXY.VS.PAPER-PROXY.ipynb  Practices_based_on_QOKit_general_simulation.ipynb  Predict(1)_kanon_0702.ipynb  Predict(2)_kanon_0703.ipynb  Predict(3)_kanon_0703.ipynb  Predict(4)_kanon_0704.ipynb  Predict(5)_kanon_0704.ipynb  QAOA-example1.ipynb  QAOA-simulator-0702.ipynb  QAOA_N_vs_Runtime.ipynb  QAOA_P_vs_Runtime.ipynb  QAOA_example2(with_fig).ipynb  QAOA_exercises.ipynb  QAOA_kanon_0701.ipynb  QAOA_mixers.ipynb  QAOA_mixers.py  QAOA_paper_benchmark.py  QAOA_paper_proxy.py  QAOA_plots.ipynb  QAOA_proxy.jl  QAOA_proxy.py  QAOA_proxy_dumb.py  QAOA_proxy_plots.ipynb  QAOA_simulator.py  QAOA_test_maxcut.py  SPSA_Practice.ipynb  classical_optimizer.ipynb  data_extractor_plotter.ipynb  new_proxy.VS.paper_proxy(1).ipynb  paper_proxy.jl  paper_proxy_benchmark.jl  plot_QAOA_runtime.ipynb  plot_proxy_heatmaps.ipynb  plot_utils.py  proxy-for-kanon.ipynb  proxy-from-paper-for-kanon.ipynb  real_distributions.ipynb  scipy_additional_optimizers.py  (+7 more)
jupyter/: Classical_solvers.ipynb  FOURIER_vs_direct_optimization.ipynb  Failure_of_QAOA_as_approximation_algo.ipynb  Fixed_parameters.ipynb  LABS initial explore.ipynb  LABS_explore_overlap.ipynb  OLD_fourier_vs_cold_start.ipynb  Overlap_vs_MF.ipynb  Scaling_of_params_with_N.ipynb  Untitled.ipynb  circuit synthesis example for ruslan.ipynb  circuit_optimization.ipynb  example_for_jeff.ipynb  explore_batch_training_results.ipynb  hardware_run_analysis.ipynb  labs_sequences.ipynb  load_from_s3.sh  observations_on_scaling_with_transferred_params_02_01.ipynb  output_distribution.ipynb  plot_heatmaps_overlap.ipynb  plot_phase_diagrams.ipynb  short-path.ipynb  summary_for_joint_meeting_01_27.ipynb  summary_for_joint_meeting_03_08.ipynb  why_higher_p_does_not_improve_scaling.ipynb  zzzz_compactification_explore.ipynb
qokit/: .coverage  __init__.py  benchmark.py  benchmark_computation.py  config.py  dicke_state_utils.py  estimator_batch.py  generator.py  ii_utils.py  labs.py  matrix.py  maxcut.py  notebook_portfolio_optim.py  parameter_utils.py  perf_utils.py  portfolio_optimization.py  profiledeep.py  profiling.py  profilingtotal.py  profilingv2.py  pyvenv.cfg  qaoa_circuit.py  qaoa_circuit_labs.py  qaoa_circuit_maxcut.py  qaoa_circuit_portfolio.py  qaoa_circuit_sk.py  qaoa_circuit_utils.py  qaoa_dwe.py  qaoa_objective.py  qaoa_objective_labs.py  qaoa_objective_maxcut.py  qaoa_objective_portfolio.py  qaoa_objective_sk.py  qaoa_vectorized.py  sk.py  utils.py  warm_start.py  yahoo.py
qokit/max_k_xor_sat/cpp/: CMakeLists.txt  adjoint.cpp  adjoint.h  adjoint_branch.cpp  adjoint_primitives.cpp  adjoint_root.cpp  alloc.cpp  alloc.h  branch.cpp  branch.h  contract.cpp  contract.h  dd.cpp  dd.h  dd_fused.cpp  dd_fused.h  dispatch.h  exports.cpp  grad.cpp  grad.h  main.cpp  primitives.cpp  primitives.h  root.cpp  root.h
scripts/: .gitignore  aggregate_rows_into_df.py  benchmark_before_after.py  benchmark_vs_bruteforce.py  compute_heatmaps.py  compute_mean_median_parameters.py  compute_mean_median_parameters_MF.py  cost_vs_hamm_dist.py  example_of_parameter_optimization.py  fit_ramps.py  generate_lp_files.py  generate_phase_diagrams.py  intermediate_overlaps.py  load_from_s3.sh  main.py  main_scipy.py  main_stop_at_optimal_bitstring_overlap.py  optimize_circuit.py  plot_improvment.py  precompute_and_cache_energies_aggregate.py  precompute_and_cache_energies_one_chunk.py  precompute_and_cache_optimal_bitstrings.py  precompute_top_energy_levels.py  push_to_s3.sh  random_guess_MF.py  run_cplex.py  run_gurobi.py  run_sweep.py  (+11 more)
(+12782 files in other folders)
