[project]
name = "qokit"
description="Quantum Optimization Toolkit"
readme = "README.md"
authors = [ 
   {name = "JP Morgan Chase & Co"},
   {email = "OmniQ_Support@jpmchase.com"}
   ]
license = {file = "LICENSE"}
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
version = "0.1.4"
requires-python = ">=3.9.0"
dependencies = [
    'networkx>=3.0.0',
    'importlib-resources>=5.2.2',
    'numba>=0.56.4,<1',
    'pandas>=2.0.1',
    'pathos>=0.3.0',
    'pytest>=7.3.1',
    'pytket>=1.15.0,<2',
    'pytket-qiskit>=0.39.0,<1',
    'pytket-quantinuum>=0.16.0,<1',
    'qiskit>=0.42,<1',
    #'qiskit-finance>=0.3,<1',
    'qiskit-ibmq-provider>=0.20.2,<1',
    'scipy>=1.10.1',
    'seaborn>=0.12.2',
    'sympy>=1.12',
    'tqdm>=4.65.0',
]

[project.optional-dependencies]
GPU = [
  'qiskit-aer-gpu>=0.8'
]
dev = [
  'black[d]>=23.3.0',
  'setuptools>=58.1.0',
  'Deprecated>=1.2.13',
  'urllib3>=1.26.6',
  'statsmodels>=0.13.5',
  'scikit-learn>=1.2.2'
]
solvers = [
  'docplex>=2.18.200',
  'gurobipy>=9.1.2'
]

[build-system]
requires = ["setuptools>=45",
"wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 160
target-version = ['py38', 'py39', 'py310', 'py311']
force-exclude = '''
(
  /(
    | .git       
    | .github       
    | jupyter
  )/
    | scripts/*.sh
    | scripts/*.md
    | ^.txt
    | ^.txt
    | ^.sh
    | ^.md
)
'''
[tool.setuptools]
py-modules = []

[tool.coverage.run]
omit = [
    "qokit/classical_methods/utils.py",
    "qokit/fur/nbcuda/fur.py",
    "qokit/fur/nbcuda/*",
    "qokit/fur/mpi_nbcuda/*",
    "qokit/fur/mpi_custatevec/*",
    "qokit/fur/diagonal_precomputation/gpu_numba.py",
    ]
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]    


[tool.setuptools.package-data]
"*" = ["*.json", "*.npy"]


[tool.setuptools.dynamic]

[tool.pyright]
reportIncompatibleMethodOverride = true
reportPrivateUsage = true
